--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: Jessica Hirsh's Resume"
+author: Jessica Hirsh
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -54,11 +54,9 @@ Contact {#contact}
 
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> jessahirsh@gmail.com
+- <i class="fa fa-github"></i> github.com/JAHirsh
+- <i class="fa fa-phone"></i> (561) 558-4385
 
 
 
@@ -114,13 +112,15 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Jessica Hirsh {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
-
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
+intro_text <- "Results-driven professional with over 10 years of experience enhancing organizational
+impact through strategic planning, innovative problem solving, and effective
+collaboration. Utilizes data and research to drive decision-making and advance
+organization's mission. Enthusiastic leader and team player who builds strong
+partnerships though articulate communication, respect, and integrity. 
 "
 
 
