--- a/resume.Rmd
+++ b/resume.Rmd
@@ -3,129 +3,68 @@ title: Jessica Hirsh's Resume"
 author: Jessica Hirsh
 date: "`r Sys.Date()`"
 output:
-  pagedown::html_resume:
-    css: ['css/custom_resume.css', 'css/styles.css', 'resume']
-    # set it to true for a self-contained HTML page but it'll take longer to render
-    self_contained: true
----
-
-
-```{r, include=FALSE}
-knitr::opts_chunk$set(
-  results='asis', 
-  echo = FALSE
-)
-library(tidyverse)
-library(glue)
-
-# Set this to true to have links turned into footnotes at the end of the document
-PDF_EXPORT <- FALSE
-
-# Holds all the links that were inserted for placement at the end
-links <- c()
-
-source('parsing_functions.R')
-
-
-# First let's get the data, filtering to only the items tagged as
-# Resume items
-position_data <- read_csv('positions.csv') %>% 
-  filter(in_resume) %>% 
-  mutate(
-    # Build some custom sections by collapsing others
-    section = case_when(
-      section %in% c('education', 'positions') ~ 'positions', 
-      TRUE ~ section
-    )
-  ) 
-
-```
+  pagedown::html_resume
 
 
 Aside
-================================================================================
+====================================
+
+Picture, etc.
+
+Contact info
+------------------------------------
+
+Email: Jessahirsh@gmail.com
+Phone: 561-558-4385
 
 
-![logo](beta_dist.png){width=100%}
+Skills
+------------------------------------
 
-Contact {#contact}
---------------------------------------------------------------------------------
+- Grant management
+- Program evaluation
+- Fundraising
 
+Disclaimer
+------------------------------------
 
-
-- <i class="fa fa-envelope"></i> jessahirsh@gmail.com
-- <i class="fa fa-github"></i> github.com/JAHirsh
-- <i class="fa fa-phone"></i> (561) 558-4385
-
-
-
-Language Skills {#skills}
---------------------------------------------------------------------------------
-
-
-
-
-
-
-Open Source Contributions {#open-source}
-
-
-
-
-Disclaimer {#disclaimer}
---------------------------------------------------------------------------------
-
-Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
-
-Source code: [github.com/nstrayer/cv](https://github.com/jahirsh/cv).
-
-Last updated on `r Sys.Date()`.
-
-
+A footer in the sidebar.
 
 
 Main
-================================================================================
+====================================
 
-Jessica Hirsh {#title}
---------------------------------------------------------------------------------
+Your Name {#title}
+------------------------------------
 
-```{r}
-intro_text <- "Results-driven professional with over 10 years of experience enhancing organizational
-impact through strategic planning, innovative problem solving, and effective
-collaboration. Utilizes data and research to drive decision-making and advance
-organization's mission. Enthusiastic leader and team player who builds strong
-partnerships though articulate communication, respect, and integrity. 
-"
+Arbitrary content.
 
+Education {data-icon=graduation-cap}
+------------------------------------
 
-cat(sanitize_links(intro_text))
-```
+### University One
 
+Arizona State University
 
+Tempe, AZ
 
-Education {data-icon=graduation-cap data-concise=true}
---------------------------------------------------------------------------------
+2020
 
-```{r}
-position_data %>% print_section('education')
-```
+B.S. Public Service and Public Policy
 
+### University Two
 
+Arizona State University
 
-Selected Positions {data-icon=suitcase}
---------------------------------------------------------------------------------
+Tempe, AZ
 
-```{r}
-position_data %>% print_section('positions')
-```
+2023
 
-Selected Writing {data-icon=newspaper}
---------------------------------------------------------------------------------
+M.S. Program Evaluation and Data Analytics
 
 
-```{r}
-position_data %>% print_section('writings')
-```
+...
 
-
+::: aside
+Arbitrary content.
+:::
